--- a/index.html
+++ b/index.html
@@ -60,4 +60,142 @@
 
 </body>
 
-</html>
+</html><!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+            <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            </header>
+    </body>
+</html><!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+            <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+                <a href="#"><img src="img/Favoritos.svg"></a>
+                <a href="#"><img src="img/Compras.svg"></a>
+                <a href="#"><img src="img/Usuario.svg"></a>
+            </header>
+    </body>
+</html><!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+            <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+            </header>
+    </body>
+</html><!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header class="cabeçalho">
+            <div class="container"> 
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            </div>
+            <div class="container">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+            </div>
+        </header>
+    </body>
+</html><body>
+    <body>
+        <header class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg"></a>
+            <a href="#"><img src="img/Compras.svg"></a>
+            <a href="#"><img src="img/Usuario.svg"></a>
+        </header>
+    </body>
+</body><body>
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </header>
+</body>
+<header class="cabeçalho">
+    <div class="container">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+    </div>
+    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+</header><!-- código omitido -->
+
+<div class container="container">
+    <input type="checkbox" id="menu" class="container__botao">
+    <label for="menu">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+    </label>
+
+<!-- código omitido -->127.0.0.1:5500/index.html<div class="container">
+  <input type="checkbox" id="menu" class="container__botao" />
+
+  <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+  <img src="i<label for="menu">
+    <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+  </label>mg/Logo.svg" alt="Logo da AluraBooks" class="container__imagem" />
+</div><div class="container">
+    <input type="checkbox" id="menu" class="container__botao" />
+    <label for="menu">
+      <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+    </label>
+    <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem" />
+  </div><ul class="lista-menu">
+    <li class="lista-menu__titulo">Categorias</li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Programação</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Front-end</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Infraestrutura</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Business</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Design & UX</a>
+    </li>
+  </ul>
